--- a/style.css
+++ b/style.css
@@ -4,23 +4,72 @@ html{
 *, *::before, *::after{
     box-sizing: inherit;
 }
+body{
+    background-color: #0a011a;
+}
 #ping-pong-table{
-    border: 2px solid black;
-    width: 700px;
-    height: 400px;
+    border: 5px solid rgba(112, 101, 169, 0.429);
+    width: 900px;
+    height: 500px;
     position: relative;
+    margin: auto;
+    margin-top: 85px;
+    /* background-color: #140e45; */
+    background-color: #17104e;
+}
+h1{
+    text-align: center;
+    /* font-family:Arial, Helvetica, sans-serif ; */
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 45px;
+    color: #c0dcfad3;
 }
 #paddle{
-    background-color: blue;
-    width: 10px;
-    height: 75px;
+    background-color: rgb(239, 95, 38);
+    width: 20px;
+    height: 90px;
     margin-left: 2px;
     position: absolute;
+    border-radius: 20px;
+   
 }
 #ball{
-    background-color: red;
-    width: 20px;
-    height: 20px;
+    background-color: rgb(255, 255, 255);
+    width: 25px;
+    height: 25px;
     border-radius: 50%;
     position: absolute;
+}
+
+#userscore, #aiscore{
+    font-size: 50px;
+    position: absolute;
+    top: 12px;
+    color: rgb(195, 199, 199);
+
+}
+#userscore{
+    left:30%;
+}
+#aiscore{
+    right: 30%;
+}
+
+.line{
+    border-left: 2px dashed #554976;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 1px;
+    height: 100%;
+    transform: translate(-50%);
+}
+#aipaddle{
+    background-color: rgb(7, 184, 84);
+    width: 20px;
+    height: 90px;
+    margin-left: 2px;
+    position: absolute;
+    right: 2px;
+     border-radius: 20px;
 }
